Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,7 @@ stages:
   - job: Build
     displayName: Build
     pool:
+      name: self-Hosted
       vmImage: ubuntu-latest
     steps:
     - task: Docker@2
