--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,3 +40,27 @@ stages:
     - script: |
         docker push containerregistryricardosilverio.azurecr.io/unyleya_ricardosilverio:latest
       displayName: "Enviar imagem para ACR"
+
+# Adicionando estágio de Deploy via Helm
+- stage: DeployHelm
+  displayName: Deploy via Helm
+  jobs:
+  - job: DeployToKubernetes
+    displayName: "Implantação no Kubernetes"
+    pool:
+      vmImage: ubuntu-latest
+    environment: Kubernetes-CD
+    steps:
+    - task: HelmInstaller@0
+      inputs:
+        helmVersion: 'latest'
+
+    - task: HelmDeploy@0
+      inputs:
+        connectionType: 'Kubernetes Service Connection'
+        kubernetesServiceEndpoint: 'NomeDoCluster'
+        namespace: 'default'
+        command: 'upgrade'
+        chartName: 'caminho-do-helm-chart'
+        releaseName: 'nome-da-release'
+        arguments: '--set image.repository=containerregistryricardosilverio.azurecr.io/unyleya_ricardosilverio,image.tag=$(tag)''
